--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
